# task_tcp_file_transfer_utility

./: README.md
doc/: HLD.md  LLD.md
tfu-project/: CMakeLists.txt
tfu-project/include/: file_handler.h  integrity.h  isocket.h  protocol.h
tfu-project/src/: receiver.cpp  sender.cpp
tfu-project/src/crypto/: integrity.cpp
tfu-project/src/io/: file_handler.cpp
tfu-project/src/socket/: isocket.cpp
tfu-project/tests/: test.h  test_file_handler.cpp  test_integrity.cpp  test_protocol.cpp
